--- a/one/templates/partials/drawers/field-schema.html
+++ b/one/templates/partials/drawers/field-schema.html
@@ -12,7 +12,9 @@
   <div class="card w-100 rounded-0 border-0">
     <!--begin::Header-->
     <div class="card-header" id="kt_fieldschemas_header">
-      <h3 class="card-title fw-bold text-dark">{% trans 'Dynamic Fields' %}</h3>
+      <div class="card-title min-w-200px">
+        {% field_schema_choices content_type=content_type %}
+      </div>
       <div class="card-toolbar">
         <button type="button" class="btn btn-sm btn-icon btn-active-light-primary me-n5"
                 id="kt_fieldschemas_close">{% get_svg_icon 'duotune/arrows/arr061.svg' 'svg-icon svg-icon-1' %}</button>
@@ -25,7 +27,7 @@
       <div id="kt_fieldschemas_scroll" class="position-relative scroll-y me-n5 pe-5" data-kt-scroll="true"
            data-kt-scroll-height="auto" data-kt-scroll-wrappers="#kt_fieldschemas_body"
            data-kt-scroll-dependencies="#kt_fieldschemas_header" data-kt-scroll-offset="5px">
-        {% field_schema_choices content_type=content_type %}
+
 
         <div id="id_div_field_schema_form">
 
