--- a/one/core/dynamic/templates/dynamic/field-schema-form.html
+++ b/one/core/dynamic/templates/dynamic/field-schema-form.html
@@ -37,7 +37,7 @@
 
     <!--begin::Formsets-->
     {% for formset in formsets %}
-      {% include "forms/formset_as_table.html" %}
+      {% include "forms/formset.html" %}
     {% endfor %}
     <!--end::Formsets-->
   </div>
