--- a/one/templates/forms/base.html
+++ b/one/templates/forms/base.html
@@ -31,7 +31,7 @@
     {% endfor %}
 
     {% for formset in formsets %}
-      {% include "forms/formset.html" %}
+      {% include "forms/formset_as_card.html" %}
     {% endfor %}
     <!--end::Formsets-->
   </div>
