--- a/one/templates/forms/dynamic.html
+++ b/one/templates/forms/dynamic.html
@@ -11,37 +11,18 @@
           schema: {
             type: "object",
             properties: {
-              make: {
-                type: "string",
-                enum: [
-                  "Toyota",
-                  "BMW",
-                  "Honda",
-                  "Ford",
-                  "Chevy",
-                  "VW"
-                ]
-              },
-              model: {
+              title: {
                 type: "string"
               },
-              year: {
-                type: "integer",
-                enum: [
-                  1995, 1996, 1997, 1998, 1999,
-                  2000, 2001, 2002, 2003, 2004,
-                  2005, 2006, 2007, 2008, 2009,
-                  2010, 2011, 2012, 2013, 2014
-                ],
-                default: 2008
+              slug: {
+                type: "string"
               },
-              safety: {
-                type: "integer",
-                format: "rating",
-                maximum: "5",
-                exclusiveMaximum: false,
-                readonly: false
-              }
+              keyword: {
+                type: "string"
+              },
+              description: {
+                type: "string"
+              },
             }
           }
         });
