--- a/one/templates/layout/partials/sidebar-layout/toolbar_title.html
+++ b/one/templates/layout/partials/sidebar-layout/toolbar_title.html
@@ -5,26 +5,19 @@
     class="page-heading d-flex text-dark fw-bold fs-3 flex-column justify-content-center my-0">{{ page_title|title }}</h1>
   <!--end::Title-->
   <!--begin::Breadcrumb-->
-  <ul class="breadcrumb breadcrumb-separatorless fw-semibold fs-7 my-0 pt-1">
+  <ol class="breadcrumb breadcrumb-dot text-muted fs-6 fw-semibold">
     {% for item in page_breadcrumb %}
-      {% if forloop.last %}
-        <!--begin::Item-->
-        <li class="breadcrumb-item text-muted">{{ item.name }}</li>
-        <!--end::Item-->
-      {% else %}
-        <!--begin::Item-->
-        <li class="breadcrumb-item text-muted">
-          <a href="{{ item.url }}" class="text-muted text-hover-primary">{{ item.name }}</a>
-        </li>
-        <!--end::Item-->
-        <!--begin::Item-->
-        <li class="breadcrumb-item">
-          <span class="bullet bg-gray-400 w-5px h-2px"></span>
-        </li>
-        <!--end::Item-->
-      {% endif %}
+      <!--begin::Item-->
+      <li class="breadcrumb-item pe-3 {% if item.url == '' %}text-muted{% endif %}">
+        {% if item.url != '' %}
+          <a href="{{ item.url }}" class="pe-3">
+        {% endif %}
+        {{ item.name }}
+        {% if item.url != '' %}</a>{% endif %}
+      </li>
+      <!--end::Item-->
     {% endfor %}
-  </ul>
+  </ol>
   <!--end::Breadcrumb-->
 </div>
 <!--end::Page title-->
