--- a/one/templates/layout/partials/sidebar-layout/toolbar_title.html
+++ b/one/templates/layout/partials/sidebar-layout/toolbar_title.html
@@ -6,6 +6,11 @@
   <!--end::Title-->
   <!--begin::Breadcrumb-->
   <ol class="breadcrumb breadcrumb-dot text-muted fs-6 fw-semibold">
+    <!--begin::Item-->
+    <li class="breadcrumb-item pe-3">
+      <a href="{% url 'home' %}" class="pe-3">{% trans 'Home' %}</a>
+    </li>
+    <!--end::Item-->
     {% for item in page_breadcrumb %}
       <!--begin::Item-->
       <li class="breadcrumb-item pe-3 {% if item.url == '' %}text-muted{% endif %}">
@@ -17,6 +22,11 @@
       </li>
       <!--end::Item-->
     {% endfor %}
+    <!--begin::Item-->
+    <li class="breadcrumb-item pe-3 text-muted">
+      {{ page_title|title }}
+    </li>
+    <!--end::Item-->
   </ol>
   <!--end::Breadcrumb-->
 </div>
