--- a/one/templates/layout/partials/header-layout/header/navbar.html
+++ b/one/templates/layout/partials/header-layout/header/navbar.html
@@ -67,7 +67,18 @@
     <!--end::Menu wrapper-->
   </div>
   <!--end::User menu-->
-
+  {% if perms.sites.change_site %}
+    <!--begin::Site-->
+    <div class="app-navbar-item ms-1 ms-lg-3">
+      <!--begin::Menu wrapper-->
+      <div
+        class="btn btn-icon btn-custom btn-icon-muted btn-active-light btn-active-color-primary w-35px h-35px w-md-40px h-md-40px position-relative"
+        id="kt_site_settings_toggle">{% get_svg_icon 'duotune/general/gen019.svg' 'svg-icon svg-icon-1' %}
+      </div>
+      <!--end::Menu wrapper-->
+    </div>
+    <!--end::Site-->
+  {% endif %}
   <!--begin::Header menu toggle-->
   <div class="app-navbar-item d-lg-none ms-2 me-n3" title="Show header menu">
     <div class="btn btn-icon btn-active-color-primary w-35px h-35px"
