--- a/one/templates/forms/base.html
+++ b/one/templates/forms/base.html
@@ -38,7 +38,7 @@
   <!--end::Card body-->
   <!--begin::Actions-->
   <div class="card-footer d-flex justify-content-end py-6 px-9">
-    <button type="reset" class="btn btn-light btn-active-light-primary me-2">{% translate 'Discard' %}</button>
+    <button type="reset" class="btn btn-light btn-active-light-primary me-2">{% translate 'Reset Form' %}</button>
     <button type="submit" class="btn btn-primary" id="kt_form_details_submit">{% translate 'Save Changes' %}</button>
   </div>
   <!--end::Actions-->
