--- a/one/templates/layout/master.html
+++ b/one/templates/layout/master.html
@@ -107,6 +107,7 @@
     <input id="id_btn_save_changes_label" value="{% trans 'Save Changes' %}">
     <input id="id_btn_delete_item" value="{% trans 'Delete item' %}">
     <input id="id_btn_update_item" value="{% trans 'Update item' %}">
+    <input id="id_btn_waiting_item" value="{% trans 'Please wait' %}">
     <input id="id_msg_label_error" value="{% trans 'Error' %}">
     <input id="id_msg_label_success" value="{% trans 'Success' %}">
     <input id="id_msg_success" value="{% trans 'Changes has save successfully' %}">
