--- a/one/templates/forms/formset_as_card.html
+++ b/one/templates/forms/formset_as_card.html
@@ -49,9 +49,10 @@
 
         <div class="{{ formset.prefix }}-empty-form-div">
           <div class="{{ formset.prefix }}-__prefix__">
-            {% for field in formset.formset.empty_form %}
+          {% with empty_form=formset.formset.empty_form %}
 
-            {% endfor %}
+          {% endwith %}
+
           </div>
         </div>
       </div>
