--- a/one/templates/forms/base.html
+++ b/one/templates/forms/base.html
@@ -26,12 +26,19 @@
     <!--end::Nested Forms-->
 
     <!--begin::Formsets-->
+    <h3>Table</h3>
     {% for formset in formsets %}
       {% include "forms/formset_as_table.html" %}
     {% endfor %}
 
+    <h3>Card</h3>
     {% for formset in formsets %}
       {% include "forms/formset_as_card.html" %}
+    {% endfor %}
+
+    <h3>Div</h3>
+    {% for formset in formsets %}
+      {% include "forms/formset_as_div.html" %}
     {% endfor %}
     <!--end::Formsets-->
   </div>
