--- a/one/templates/fields/floating-label-field.html
+++ b/one/templates/fields/floating-label-field.html
@@ -1,6 +1,6 @@
 <!--begin::Input group-->
-<div class="form-floating mb-7">
-    {{ field }}
-    <label for="id_{{ field.name }}">{{ field.label|title }}</label>
+<div class="form-floating">
+  {{ field }}
+  <label for="id_{{ field.name }}">{{ field.label|title }}</label>
 </div>
 <!--end::Input group-->
