--- a/one/templates/fields/floating-label-select-field.html
+++ b/one/templates/fields/floating-label-select-field.html
@@ -1,4 +1,4 @@
-<div class="form-floating border rounded mb-7">
-    {{ field }}
-    <label>{{ field.label|title }}</label>
+<div class="form-floating border rounded">
+  {{ field }}
+  <label>{{ field.label|title }}</label>
 </div>
