--- a/one/templates/forms/base.html
+++ b/one/templates/forms/base.html
@@ -28,7 +28,7 @@
     <!--begin::Formsets-->
     <h3>Table</h3>
     {% for formset in formsets %}
-      {% include "forms/formset_as_table.html" %}
+      {#      {% include "forms/formset_as_table.html" %}#}
     {% endfor %}
 
     <h3>Card</h3>
@@ -38,7 +38,7 @@
 
     <h3>Div</h3>
     {% for formset in formsets %}
-      {% include "forms/formset_as_div.html" %}
+      {#      {% include "forms/formset_as_div.html" %}#}
     {% endfor %}
     <!--end::Formsets-->
   </div>
